--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 .header {
-    display: flex;
-    background-color: rgb(50, 167, 145);
+  display: flex;
+  background-color: rgb(50, 167, 145);
 }
 
-.trybewarts-login {
-    display: flex; 
+.trybewarts-login { display: flex;
 }
