--- a/style.css
+++ b/style.css
@@ -5,3 +5,11 @@
 
 .trybewarts-login { display: flex;
 }
+
+#evaluation-form { display: flex;
+  width: 675px;
+}
+
+#main-cantainer {
+  display: flex;
+}
