Adiciona classe Bootstrap ao botão do header e altera cor do h1

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
   justify-content: space-around; /* Yuri: cria espaçamento dos inputs email e senha */
 }
 
+#trybewarts-header-title {
+  color: white; /* Yuri: altera cor do h1 do header */
+}
+
 #evaluation-form { display: flex;
   width: 675px;
   flex-direction: column;
