--- a/style.css
+++ b/style.css
@@ -7,12 +7,18 @@
   font-family: Inknut Antiqua, serif;
 }
 
+body {
+  background-image: url('https://wallpaperaccess.com/full/367863.jpg');
+  background-repeat: round;
+}
+
 .header {
   display: flex;
   background-color: rgb(50, 167, 145);
   height: 3.5em; /* Yuri: ajeitei tamanho do header */
   justify-content: space-between;
   padding: 5px;
+  margin-bottom: 2%;
 }
 
 .input-group-text {
@@ -30,28 +36,46 @@
 #evaluation-form { display: flex;
   width: 675px;
   flex-direction: column;
+  background-color: rgb(239, 239, 239);
+  border-radius: 1%;
+  padding: 1%;
+  opacity: 0.9;
+  box-shadow: 10px 5px 5px black;
 }
 
 #main-cantainer {
-  margin: 4%;
+  padding: 2%;
+  justify-content: space-between;
   display: flex;
 }
 
+.container-name {
+  display: flex;
+  margin-bottom: 1%;
+}
+
 #form-title {
-  margin-left: 10%;
-  margin-bottom: 5%;
+  text-align: center;
+  margin-bottom: 3%;
+  font-size: 1.5em;
 }
 
 #info input {
   border: 1px solid grey;
   border-radius: 7px;
-  padding: 10px 5px;
+  padding: 5px;
+}
+
+#input-name {
+  margin-right: 3%;
+}
+
+#input-email {
+  margin-right: 3%;
 }
 
 #trybewarts-forms-logo {
   height: 500px;
-  margin-top: 10%;
-  margin-left: 260px;
 }
 
 #familys { display: flex;
@@ -61,6 +85,11 @@
 #check-content { display: flex;
   flex-direction: column;
   width: 50%;
+}
+
+#language-container1 , #language-container2 {
+  display: flex;
+  justify-content: space-between;
 }
 
 #rate-container { display: flex;
@@ -74,12 +103,17 @@
 
 }
 
+.textarea-container {
+  display: flex;
+  flex-direction: column;
+}
+
 #textarea {
   padding: 10px;
-  width: 100%;
   border-radius: 10px;
   resize: none;
   border: 1px solid black;
+  flex-basis: 100px;
 }
 
 hr {
@@ -92,6 +126,7 @@ footer {
   position: absolute;
   width: 100%;
   justify-content: center;
-  background-color: rgb(117, 113, 113);
+  color: white;
+  background-color: rgb(60, 64, 74);
   padding: 20px;
 }
