--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ footer {
   width: 100%;
   justify-content: center;
   color: white;
-  background-color: rgb(60, 64, 74);
+  background-color: rgb(50, 167, 145);
   padding: 20px;
+  margin-top: 103px;
 }
